# my-tts-app

./: README.md  app.py  locale_map.json  pyproject.toml  test_edge_tts.py  translate_cache.json  voices_data.json  voices_data_handle.py  voices_en.json  voices_get.py
static/: index.html
